[tool.poetry]
name = "heaven"
version = "0.3.9"
description = "Extremely Stupid Simple, Blazing Fast, Get Out of your way immediately Microframework for building Python Web Applications."
authors = ["Raymond Ortserga <ortserga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^3.1.0"
uvicorn = ">=0.14"
aiofiles = "^23.0.0"
websockets = ">=12.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
